# KRRPM

./: KRRPM-Example.ipynb  KRRPM.py  LICENSE  README.md  requirements.txt  setup.cfg
examples/: KRRPM-Example.ipynb
src/KRRPM/: __init__.py
src/krrpm/: __init__.py  krrpm.py
