[metadata]
name = krrpm
version = 1.0
author = Paolo Toccaceli
author_email = Paolo.Toccaceli@rhul.ac.uk
description = Implementation of Kernel Ridge Regression Predictive Machine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ptocca/KRRPM
project_urls =
    Bug Tracker = https://github.com/ptocca/KRRPM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    scikit-learn>=0.22.1
    numba>=0.48.0

[options.packages.find]
where = src